<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".WelcomeActivity"
    android:padding="20dp"
    >



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon1"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtw"
        android:layout_marginTop="55dp"
        />
    <TextView

        android:id="@+id/txtw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="35sp"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"/>

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btn1"
        android:text="@string/sing_up"
       android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"/>

    <Button
        android:id="@+id/btn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btn2"
        android:text="@string/sign_in"
        android:layout_above="@+id/btn1"
        android:layout_marginBottom="20dp"/>









</RelativeLayout>