<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".RegisterActivity">


    <include layout="@layout/actionbar"
        android:id="@+id/actionbarregister"/>



    <!--<pl.droidsonroids.gif.GifImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@drawable/giphy"
        /> -->

    <TextView
        android:id="@+id/txtinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creat_new_account"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/actionbarregister"
        />
    <TextView
        android:id="@+id/txtuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_below="@+id/txtinfo"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"/>
    <EditText
        android:id="@+id/txtusername"
        android:maxLength="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtuser"
        android:hint="@string/username"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="text"

        />
    <TextView
        android:id="@+id/txtmail"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_below="@+id/txtusername"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"/>
    <EditText
        android:maxLength="25"
        android:id="@+id/txtemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtmail"
        android:hint="@string/email"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="textEmailAddress"

        />
    <TextView
        android:id="@+id/txtpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_below="@+id/txtemail"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"/>
    <EditText
        android:id="@+id/txtpassword"
        android:maxLength="11"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtpass"
        android:hint="@string/password"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"

        />

    <Button
        android:id="@+id/btnsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtpassword"
        android:layout_marginTop="45dp"
        android:text="@string/sing_up"
        android:background="@color/bar"
        />




</RelativeLayout>